--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "init": "npx tambo init"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
     "@tailwindcss/oxide": "^4.1.17",
@@ -27,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "dompurify": "^3.3.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.2",
     "highlight.js": "^11.11.1",
     "json-stringify-pretty-compact": "^4.0.0",
     "lucide-react": "^0.554.0",
